fixade spacing vid bredare skärmar

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -90,6 +90,7 @@ h3 {
 
     .main-content {
         column-gap: 20px;
+        justify-content: space-evenly;
     }
 
     #box-2 {
